@@ -8,7 +8,6 @@ libpoke/ios-dev-mmap.c
 libpoke/ios-dev-nbd.c
 libpoke/ios.h
 libpoke/pkl-anal.c
-libpoke/pkl-anal.h
 libpoke/pkl-asm.c
 libpoke/pkl-asm.h
 libpoke/pkl-ast.c
@@ -17,20 +16,15 @@ libpoke/pkl.c
 libpoke/pkl-env.c
 libpoke/pkl-env.h
 libpoke/pkl-fold.c
-libpoke/pkl-fold.h
 libpoke/pkl-gen.c
-libpoke/pkl-gen.h
 libpoke/pkl.h
 libpoke/pkl-parser.c
 libpoke/pkl-parser.h
 libpoke/pkl-pass.c
 libpoke/pkl-pass.h
 libpoke/pkl-promo.c
-libpoke/pkl-promo.h
 libpoke/pkl-trans.c
-libpoke/pkl-trans.h
 libpoke/pkl-typify.c
-libpoke/pkl-typify.h
 libpoke/pvm-alloc.c
 libpoke/pvm-alloc.h
 libpoke/pvm.c
